[package]
name = "some_crate"
version = "0.1.3"
authors = ["Ralf Biedert <rb@xr.io>"]
license = "WTFPL"
edition = "2015"
description = "If you just need a crate that's guaranteed(*) to do practically nothing."
repository = "https://github.com/ralfbiedert/some_crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
